# coworking

./: .gitignore  README.md  pyproject.toml  template.env
configs/: chatbox_models.yaml  vector_collector.yaml
coworking/: agent.py  agent_logging.py  chatbox.py  config.py  main.py  structs.py  toolsets.py  util.py
data/papers/: 2510.10185.md  2510.10278.md  2510.16712.md  2510.16727.md  2602.00279.md  2603.16643.md  2604.04325.md  2604.10585.md  2604.21564.md  2605.22047.md  2606.10949.md  N18-1074.md  frai-7-1464690.md  s41586-024-07421-0.md  s41746-025-02008-z.md
