[project]
name = "coworking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.4.1",
  "jinja2>=3.1.6",
  "openai>=2.41.1",
  "pydantic-ai>=2.0.0",
  "tenacity>=9.1.4",
  "tqdm>=4.68.3",
]

[project.scripts]
duc-tooling = "duc_tooling.main:main"

[dependency-groups]
dev = [
  "ipython>=9.14.1",
  "pytest>=9.1.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coworking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # import sorting
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "C4",  # flake8-comprehensions
  "RET",  # return-value consistency and simplification
  "RUF",  # Ruff-specific checks
]
ignore = [
  "E501",  # prompt-heavy code: do not fight long strings/comments
  "RUF001",  # en-dashes in schema text are intentional (e.g. "1-N points")
]
